dhall/tests/type-inference/failure/unit/VariableFree.txt
Type error: error: unbound variable `x`
 --> <current file>:1:1
  |
1 | x
  | ^ not found in this scope
  |
